# Abundantia

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: lint_and_format.yml  lint_format_test.yml  pylint.yml
src/abundantia/: ftx_client.py  logger.py  utils.py
src/abundantia/adapters/: __init__.py
src/abundantia/adapters/databases/: sqlite_client.py
src/abundantia/adapters/exchanges/: base.py  binance_client.py  bitflyer_client.py  (+3 more)
src/abundantia/adaptors/: __init__.py  bitflyer_client.py  csv.py  csv_client.py  gmocoin_client.py  pickle_client.py
src/abundantia/databases/: sqlite_client.py
src/abundantia/datastores/: csv_client.py  pickle_client.py  s3_client.py
src/abundantia/exchanges/: base.py  binance_client.py  bitflyer_client.py  bybit_client.py  ftx_client.py  gmocoin_client.py
src/abundantia/ingestions/: bitflyer_executions.py
src/abundantia/schema/: __init__.py  binance.py  bitflyer.py  bybit.py  common.py  ftx.py  gmocoin.py  model.py
tests/: conftest.py  test_abundantia.py  test_ftx_client.py  test_ingest.py
tests/adapters/databases/: test_sqlite_client.py
tests/adapters/exchanges/: test_base.py  test_binance_client.py  test_bitflyer_client.py  test_bybit_client.py  test_ftx_client.py  test_gmocoin_client.py
tests/adapters/files/: test_s3_client.py
tests/adaptors/databases/: test_sqlite_client.py
tests/adaptors/exchanges/: test_bitflyer_client.py  test_gmocoin_client.py
tests/databases/: test_sqlite_client.py
tests/datastores/: test_s3_client.py
tests/exchanges/: test_base.py  test_binance_client.py  test_bitflyer_client.py  test_bybit_client.py  test_ftx_client.py  test_gmocoin_client.py
tests/pipelines/ingestion/: test_ingest_klines.py  test_ingest_klines_from_gmocoin.py
(+10 files in other folders)
