[tool.poetry]
name = "Abundantia"
version = "0.1.0"
description = ""
authors = ["ryo.ishii <ryoishii1101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
requests = "^2.27.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
pandera = "^0.10.1"
fsspec = "^2022.3.0"
s3fs = "^2022.3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.941"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.1"
types-requests = "^2.27.16"
jupyterlab = "^3.3.3"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
