[tool.poetry]
name = "Abundantia"
version = "0.2.0"
description = ""
authors = ["ryo.ishii <ryoishii1101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"
pytest = "^7.1.3"
types-requests = "^2.28.11.2"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "auth",
    "slow"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
